<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="ez.com.inside.activities.StartActivity"
    android:layout_margin="8dp"
    android:columnCount="2">

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/CardMenu"
        android:onClick="onClickApplicationsUsageActivity"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/TitleCard"
                android:text="@string/card_usage_title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp"
                style="@style/RecapCard"
                android:text="@string/card_usage_recap"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/CardMenu"
        android:onClick="onClickApplicationsAuthorizationsActivity"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/lock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/TitleCard"
                android:text="@string/card_apps_autho_title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp"
                style="@style/RecapCard"
                android:text="@string/card_apps_autho_recap"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        style="@style/CardMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClickNetworkActivity"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/wip" />

            <TextView
                style="@style/TitleCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/card_network_title" />

            <TextView
                style="@style/RecapCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="5dp"
                android:text="@string/card_network_recap" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</GridLayout>
